# openflightloggerbackend

./: .gitignore  API_DOCUMENTATION.md  CMakeLists.txt  README.md  compose.yml  config.json  init.sql  main.cc
controllers/: AirportsController.cc  AirportsController.h  AirportsControllerBase.cc  AirportsControllerBase.h  Auth.cpp  Auth.h  DefaultCtrl.cpp  DefaultCtrl.h  FlightsController.cc  FlightsController.h  GuiController.cpp  GuiController.h  RestfulapiController.cc  RestfulapiController.h  RestfulapiControllerBase.cc  RestfulapiControllerBase.h
data_feeding/: airlines.py  airports.py  dbconfig.py
filters/: CorsMiddleware.cc  JwtFilter.cc  JwtFilter.h
models/: Airlines.cc  Airlines.h  Airports.cc  Airports.h  Flights.cc  Flights.h  Users.cc  Users.h  model.json
test/: AuthTest.cc  CMakeLists.txt  test_main.cc
utils/: crypto.h
utils/jwt/: JWT.cpp  JWT.h
views/: Account.csp  Login.csp  Register.csp
